#2774 - Fix - User biography spacing issue grunt

--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -8949,6 +8949,10 @@ ul.bbp-stats .bbp-count {
   margin-top: 0;
 }
 
+.buddypress-wrap table.profile-fields td.data > p {
+  margin: 0 0 25px;
+}
+
 /**
 *-------------------------------------------------------------------------------
 * @section 8.0 - Classes - Messages, Ajax, Widgets, Buttons
